--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-11-13  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/yolov3tiny.py (YOLO.__make_upsample): Modify repo
+	structure. Add YOLO config parser.
+
 2018-11-12  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/utils/utils.py: Restructure repo. Add YOLO detection project
