Fix YOLO constructor.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-11-21  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/yolov3tiny.py: Fix YOLO constructor.
+
 2018-11-19  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* LICENSE (met): Update license.
