--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2018-11-25  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/yolov3tiny.py: Fix routing layers.
+	Implement detection layer.
 
 2018-11-21  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
