--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-06  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* cam-classify.py: Fix cam-classify input image channel ordering.
+
 2018-12-04  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/yolov3tiny.py (YOLODetect.__transform_bbox_centers): Bugfix
