--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-12-08  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/yolov3tiny.py: Fix same padding value for max pooling
+	layer.
+
 2018-12-06  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* cam-classify.py: Fix cam-classify input image channel ordering.
