--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-10  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/utils/capture.py: Make better prediction frame.
+
 2018-12-09  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/utils/utils.py: Create detection frame.
