--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-11  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/utils/utils.py (nms): Implement nms.
+
 2018-12-10  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/utils/capture.py: Adapt detection frame to letterbox and
