--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-12-12  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
+	* lib/utils/utils.py: Implement batch image loader.
+
 	* lib/utils/capture.py: Correct detection drawing bounding error.
 
 2018-12-11  Zhijin Li  <jonathan.zj.lee@gmail.com>
