--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-12-12  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
+	* lib/utils/capture.py: Improve frame trimming.
+
 	* cam-detect.py: Test on Darknet images.
 
 	* lib/utils/utils.py: Implement batch image loader.
