--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-12-13  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/yolov3tiny.py (detect_color_img): Refactorize detection
+	APIs.
+
 2018-12-12  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/utils/capture.py: Improve frame trimming.
