--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2018-12-13  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
+	* lib/utils/utils.py (download_yoolov3tiny_weights): Add weight
+	download API.
+
 	* cam-detect.py: Implement real-time cam detection.
 
 	* lib/yolov3tiny.py (detect_color_img): Refactorize detection
