--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-16  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* cam-classify.py: Change MobileNet input size.
+
 2018-12-13  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* lib/utils/utils.py (download_yoolov3tiny_weights): Add weight
