--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-17  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* lib/utils/capture.py: Fix video cam demo.
+
 2018-12-16  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* cam-detect.py: Add test option with darknet letter boxes.
