--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-12-17  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
+	* README.md: Update documentation.
+
 	* lib/utils/capture.py: Fix video cam demo.
 
 2018-12-16  Zhijin Li  <jonathan.zj.lee@gmail.com>
