--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2018-12-17  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* README.md: Update documentation. Add documentation images.
+	Change example image size.
 
 	* lib/utils/capture.py: Fix video cam demo.
 
