--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-22  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* README.md: Update documentation.
+
 2018-12-17  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* README.md: Update documentation. Add documentation images.
