--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-01-06  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* README.md: Add entries for on-going implementations.
+
 2018-12-24  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* README.md: Refine documentation.
